--- a/Chi/news.html
+++ b/Chi/news.html
@@ -22,11 +22,11 @@
             ></label>
             <label for="show-menu" class="nav_overlay"></label>
             <ul class="links">
-              <li><a class="active" href="../Thang/index.html">HOME</a></li>
+              <li><a href="../Thang/index.html">HOME</a></li>
               <li class="hover_sub1">
-                <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+                <a href="../Viet/packages.html" class="desktop-link">PACKAGES</a>
                 <input type="checkbox" id="show-package" />
-                <label for="show-package">PACKAGE</label>
+                <label for="show-package">PACKAGES</label>
                 <ul class="sub_nav">
                   <li class="trend">
                     <a href="../Viet/packages.html">Search 1</a>
@@ -78,7 +78,7 @@
                 </ul>
               </li>
               <li>
-                <a href="../Chi/news.html" class="desktop-link">NEWS</a>
+                <a href="../Chi/news.html" class="active1 desktop-link">NEWS</a>
                 <input type="checkbox" id="show-news" />
                 <label for="show-news">NEWS</label>
                 <ul class="sub_nav">
@@ -324,5 +324,6 @@
             <img class="leaf-img" src="../Chi/images/leaf.png" style="width: 15px;">
         </a>
     </div>
+    <script src="../Thang/js/smooth.js"></script>
 </body>
 </html>
