--- a/Thang/index.html
+++ b/Thang/index.html
@@ -38,9 +38,15 @@
             ></label>
             <label for="show-menu" class="nav_overlay"></label>
             <ul class="links">
-              <li><a class="active" href="../Thang/index.html">HOME</a></li>
+              <li>
+                <a class="active1 home-active" href="../Thang/index.html"
+                  >HOME</a
+                >
+              </li>
               <li class="hover_sub1">
-                <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+                <a href="../Viet/packages.html" class="desktop-link"
+                  >PACKAGES</a
+                >
                 <input type="checkbox" id="show-package" />
                 <label for="show-package">PACKAGES</label>
                 <ul class="sub_nav">
@@ -198,7 +204,7 @@
               <p>ALL INCLUSIVE FAMILY HOLIDAY<br />FOR ALL SEASON</p>
             </div>
           </div>
-          <a href="#" class="buy"
+          <a href="#" class="buy1"
             >BUY THE TOUR
             <p class="price">$25</p>
           </a>
@@ -558,5 +564,6 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+    <script src="../Thang/js/smooth.js"></script>
   </body>
 </html>
