--- a/Viet/packages.html
+++ b/Viet/packages.html
@@ -35,7 +35,7 @@
         <ul class="links">
           <li><a href="../Thang/index.html">HOME</a></li>
           <li class="hover_sub1">
-            <a class="active" href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+            <a class="active1" href="../Viet/packages.html" class="desktop-link">PACKAGES</a>
             <input type="checkbox" id="show-package" />
             <label for="show-package">PACKAGES</label>
             <ul class="sub_nav">
@@ -340,7 +340,7 @@
                   </p>
                   <p class="text-item-2">
                     Cultural
-                    <span class="add-2 br-30" style="">+2</span>
+                    <span class="add-2 br-30">+2</span>
                   </p>
                 </div>
               </div>
@@ -371,7 +371,7 @@
             <iframe frameborder="0" src="https://www.google.com/maps/d/u/1/embed?mid=1b9ry5Sg2H7gaJw2jRhUJDNXYcbFjCfW2" class="iframe-1" width="100%" height="481"></iframe>
           
             <div class="box-btn-option">
-              <button class="btn-op btn-des btn-active" style="">description</button>
+              <button class="btn-op btn-des btn-active">description</button>
               <button class="btn-op btn-map">map</button>
               <button class="btn-op btn-photo">photos</button>
               <button class="btn-op btn-program">program</button>
@@ -490,7 +490,7 @@
   
               <div class="schedule">
                 <div class="day-item">
-                  <div class="icon-deatail" style="">
+                  <div class="icon-deatail"  >
                     <img src="img/icon-add-white.png" class="deatail-active" alt="">
                     <img src="img/icon-less-white.png"  alt="">
                   </div>
@@ -504,7 +504,7 @@
                 </div>
 
                 <div class="day-item">
-                  <div class="icon-deatail" style="">
+                  <div class="icon-deatail">
                     <img src="img/icon-add-white.png" class="deatail-active" alt="">
                     <img src="img/icon-less-white.png"  alt="">
                   </div>
@@ -518,7 +518,7 @@
                 </div>
 
                 <div class="day-item">
-                  <div class="icon-deatail" style="">
+                  <div class="icon-deatail"  >
                     <img src="img/icon-add-white.png" class="deatail-active" alt="">
                     <img src="img/icon-less-white.png"  alt="">
                   </div>
@@ -532,7 +532,7 @@
                 </div>
 
                 <div class="day-item">
-                  <div class="icon-deatail" style="">
+                  <div class="icon-deatail"  >
                     <img src="img/icon-add-white.png" class="deatail-active" alt="">
                     <img src="img/icon-less-white.png"  alt="">
                   </div>
@@ -546,7 +546,7 @@
                 </div>
 
                 <div class="day-item">
-                  <div class="icon-deatail" style="">
+                  <div class="icon-deatail"  >
                     <img src="img/icon-add-white.png" class="deatail-active" alt="">
                     <img src="img/icon-less-white.png"  alt="">
                   </div>
@@ -567,7 +567,7 @@
           </div>
   
           <div class="part-right col-xl-4 col-lg-12 col-md-12 col-12">
-            <div class="part-right-header" style="">700 
+            <div class="part-right-header"  >700 
               <span>$</span>
             </div>
             <div class="form-book">
@@ -582,7 +582,7 @@
               <input type="text" class="" placeholder="Phone">
               <textarea type="message" class="" placeholder="Message"></textarea>
   
-              <button class="btn-send text-uppercase" style="">send now</button>
+              <button class="btn-send text-uppercase"  >send now</button>
             </div>
             <img src="img/part-right-img.jpg" class="img-fluid mt-40 mb-40" alt="">
             <div class="best-packages mb-40">
@@ -852,5 +852,7 @@
   <!-- Bootstrap -->
   <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+
+  <script src="../Thang/js/smooth.js"></script>
 </body>
 </html>
