--- a/Viet/shop.html
+++ b/Viet/shop.html
@@ -29,7 +29,7 @@
         <ul class="links">
           <li><a href="../Thang/index.html">HOME</a></li>
           <li class="hover_sub1">
-            <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+            <a href="../Viet/packages.html" class="desktop-link">PACKAGES</a>
             <input type="checkbox" id="show-package" />
             <label for="show-package">PACKAGES</label>
             <ul class="sub_nav">
@@ -59,7 +59,7 @@
             </ul>
           </li>
           <li>
-            <a class="active" class="desktop-link" href="../Viet/shop.html">SHOP</a>
+            <a class="active1" class="desktop-link" href="../Viet/shop.html">SHOP</a>
             <input type="checkbox" id="show-shop" />
             <label for="show-shop">SHOP</label>
             <ul class="sub_nav">
@@ -242,5 +242,7 @@
 
   <script src="js/shop-cards.js"></script>
   <script src="js/shop.js"></script>
+
+  <script src="../Thang/js/smooth.js"></script>
 </body>
 </html>
