--- a/Chi/contact.html
+++ b/Chi/contact.html
@@ -26,11 +26,11 @@
           ></label>
           <label for="show-menu" class="nav_overlay"></label>
           <ul class="links">
-            <li><a class="active" href="../Thang/index.html">HOME</a></li>
+            <li><a href="../Thang/index.html">HOME</a></li>
             <li class="hover_sub1">
-              <a href="../Viet/packages.html" class="desktop-link">PACKAGE</a>
+              <a href="../Viet/packages.html" class="desktop-link">PACKAGES</a>
               <input type="checkbox" id="show-package" />
-              <label for="show-package">PACKAGE</label>
+              <label for="show-package">PACKAGES</label>
               <ul class="sub_nav">
                 <li class="trend">
                   <a href="../Viet/packages.html">Search 1</a>
@@ -102,7 +102,7 @@
               </ul>
             </li>
             <li>
-              <a href="../Chi/contact.html" class="desktop-link">CONTACT</a>
+              <a href="../Chi/contact.html" class="active1 desktop-link">CONTACT</a>
               <input type="checkbox" id="show-contact" />
               <label for="show-contact">CONTACT</label>
               <ul class="sub_nav">
@@ -328,5 +328,6 @@
     </div>
     <!-- JS validate -->
     <script src="./js/checkform.js"></script>
+    <script src="../Thang/js/smooth.js"></script>
   </body>
 </html>
