--- a/Chi/contact.html
+++ b/Chi/contact.html
@@ -19,7 +19,7 @@
     <div class="header">
       <div class="header_nav">
         <div class="header_content">
-          <img class="logo" src="../Thang/images/logo.png" alt="logo" />
+          <a href="../Thang/index.html"><img class="logo" src="../Thang/images/logo.png" alt="logo" /></a>
           <input type="checkbox" id="show-menu" />
           <label for="show-menu" class="menu-icon"
             ><i class="fas fa-bars"></i
